--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
   - 1.9.3
 install:
-  - sudo bash -c "echo deb http://badgerports.org lucid main >> /etc/apt/sources.list"
+  - sudo bash -c "echo deb http://ppa.launchpad.net/directhex/badgerports-throwback/ubuntu lucid main >> /etc/apt/sources.list"
   - sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 0E1FAD0C
   - sudo apt-get update
   - sudo apt-get install mono-devel mono-gmcs mono-vbnc
